# BLOG_APP

./: .gitignore  pyproject.toml
src/blog/: models.py  urls.py  views.py
src/blog/migrations/: 0001_initial.py
src/blog/templates/blog/: about.html  base.html
src/src/: settings.py  urls.py
