[tool.poetry]
name = "blog_app"
version = "0.1.0"
description = "blog app for study cases"
authors = ["nilton.seixas <nfsseixas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2"
dynaconf = "^3.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
